<resources>
    <string name="app_name">DeliveryFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    //fragment
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="near_me">Near Me</string>
    <string name="alerts">Alerts</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>

    //location
    <string name="title_activity_maps">Map</string>
    <string name="tv_your_location">Your Location</string>
    <string name="et_hint_apartment">Apartment</string>
    <string name="et_hint_eg_home_work">EG. Home,Work</string>
    <string name="btn_text_save_address">Save Address</string>

    //auth
    <string name="email_et_hint">Email</string>
    <string name="login_password_et_hint">Password</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="register">Don\'t have an account yet?</string>
    <string name="toolbar_login">LOGIN \nEnter your email and Password</string>
    <string name="register_question_text">Already have an account?</string>
    <string name="register_btn_text">Register</string>
    <string name="register_toolbar_title">Register \nRegister now for free</string>
    <string name="et_phone_hint">Phone</string>
</resources>