<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.AuthFragment">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/large_margin_bottom"
                    android:text="@string/register_toolbar_title"
                    android:textSize="@dimen/large_text_size"
                    android:textStyle="bold" />
            </FrameLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="64dp"
                android:layout_marginTop="@dimen/small_margin_top"
                android:src="@drawable/icon_regis"/>
        </LinearLayout>
    </Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin_end"
        android:hint="Name"
        android:padding="@dimen/large_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_start"
        android:layout_marginEnd="@dimen/small_margin_end"
        android:hint="@string/email_et_hint"
        android:padding="@dimen/small_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_start"
        android:layout_marginEnd="@dimen/small_margin_end"
        android:hint="@string/et_phone_hint"
        android:padding="@dimen/small_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_start"
        android:layout_marginEnd="@dimen/small_margin_end"
        android:hint="Password"
        android:padding="@dimen/small_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_start"
        android:layout_marginTop="@dimen/large_margin_top"
        android:layout_marginEnd="@dimen/small_margin_end"
        android:backgroundTint="@color/btn_background_color"
        android:padding="@dimen/small_padding"
        android:text="@string/register_btn_text"
        android:textAllCaps="false"
        android:textSize="@dimen/large_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_start"
        android:layout_marginTop="@dimen/large_margin_top"
        android:layout_marginEnd="@dimen/large_margin_end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin_start"
            android:layout_marginEnd="@dimen/small_margin_end"
            android:text="@string/register_question_text"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin_end"
            android:text="@string/login_btn_text"
            android:textAllCaps="false"
            android:textSize="@dimen/large_text_size" />

    </LinearLayout>

</LinearLayout>